syntax = "proto3";

package pb;

import "enums.proto";
import "dissidents.proto";

// ========== Settings ==========

// The top-level settings proto included in GameSettings.
// Immutable over the duration of a single game.

message ProvincesSettings {
  repeated ProvinceSettings province_settings = 1;
}

message ProvinceSettings {
  ProvinceId id = 1;
  string label = 2;
  repeated ProvinceId adjacency = 3;
  int32 stability_base = 4;
  Region region = 10;
  // Culture culture = 11;
  bool coastal = 12;
  
  // Initialization
  int32 init_influence = 5;
  Government init_government = 6;
  ProvinceId init_occupier = 7;
  string init_leader = 8;
  Dissidents init_dissidents = 9;
}

// ========== State ==========

// The top-level state proto included in GameState.
// Mutated each turn based on moves.

message ProvincesState {
  repeated ProvinceState province_states = 1;
}

message ProvinceState {
  ProvinceId id = 1;
  int32 influence = 2;
  Government gov = 3;
  ProvinceId occupier = 4;
  string leader = 5;
  Dissidents dissidents = 6;
}
